--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <nav class="dflex container">
+        <div class="logo dflex">
+            <img src="Images/Group 40071 (2).png" alt="Group">
+            <h3>Hero <span class="travel" style="color: tomato;">Travel</span></h3>
+        </div>
+        <div class="nav-links">
+            <a href="">Home</a><a href="">Pakejes</a><a href="">Test</a><a href="">Blog</a><a href="">Contact</a>
+        </div>
+    </nav>
     
 </body>
 </html>
