--- a/index.html
+++ b/index.html
@@ -16,6 +16,44 @@
             <a href="">Home</a><a href="">Pakejes</a><a href="">Test</a><a href="">Blog</a><a href="">Contact</a>
         </div>
     </nav>
+
+    <main>
+        <section class="container hero-section dflex">
+            <div class="textandselect">
+                <h1>Explore Your Travel</h1>
+                <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis sapien urna eu phasellus.</p>
+                <div class="inputs">
+                    <input type="text" placeholder="Place Name">
+                    <select name="" id="">
+                        <option value="">Where</option>
+                    </select>
+                    <select name="" id="">
+                        <option value="">When</option>
+                    </select>
+                    <select name="" id="">
+                        <option value="">Select Type</option>
+                    </select>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="populer-tours container">
+            <div class="text-part">
+                <h2>Our Popular Tours</h2>
+                <p style="color:black;">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <UL>
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                </UL>
+                <p style="color:black;">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div>
+                <img src="Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
