--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
                     <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
                 </UL>
                 <p style="color:black;">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <button class="btn">Contact Now</button>
             </div>
             <div>
                 <img src="Images/Rectangle 4.png" alt="">
             </div>
+
         </section>
     </main>
     
