--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             </div>
 
         </section>
+
+        <section class="destination">
+            
+        </section>
     </main>
     
 </body>
