added gallery section

--- a/index.html
+++ b/index.html
@@ -1,65 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hero travel</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
     <nav class="dflex container">
-        <div class="logo dflex">
-            <img src="Images/Group 40071 (2).png" alt="Group">
-            <h3>Hero <span class="travel" style="color: tomato;">Travel</span></h3>
-        </div>
-        <div class="nav-links">
-            <a href="">Home</a><a href="">Pakejes</a><a href="">Test</a><a href="">Blog</a><a href="">Contact</a>
-        </div>
+      <div class="logo dflex">
+        <img src="Images/Group 40071 (2).png" alt="Group" />
+        <h3>Hero <span class="travel" style="color: tomato">Travel</span></h3>
+      </div>
+      <div class="nav-links">
+        <a href="">Home</a><a href="">Pakejes</a><a href="">Test</a
+        ><a href="">Blog</a><a href="">Contact</a>
+      </div>
     </nav>
 
     <main>
-        <section class="container hero-section dflex">
-            <div class="textandselect">
-                <h1>Explore Your Travel</h1>
-                <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio <br> enim ac quis sapien urna eu phasellus.</p>
-                <div class="inputs">
-                    <input type="text" placeholder="Place Name">
-                    <select name="" id="">
-                        <option value="">Where</option>
-                    </select>
-                    <select name="" id="">
-                        <option value="">When</option>
-                    </select>
-                    <select name="" id="">
-                        <option value="">Select Type</option>
-                    </select>
+      <section class="container hero-section dflex">
+        <div class="textandselect">
+          <h1>Explore Your Travel</h1>
+          <p>
+            Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+            adipiscing. In et odio <br />
+            enim ac quis sapien urna eu phasellus.
+          </p>
+          <div class="inputs">
+            <input type="text" placeholder="Place Name" />
+            <select name="" id="">
+              <option value="">Where</option>
+            </select>
+            <select name="" id="">
+              <option value="">When</option>
+            </select>
+            <select name="" id="">
+              <option value="">Select Type</option>
+            </select>
+          </div>
+        </div>
+      </section>
+
+      <section class="populer-tours container">
+        <div class="text-part">
+          <h2>Our Popular Tours</h2>
+          <p style="color: black">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+          <ul>
+            <li>
+              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              nullam odio neque diam. Sociis erat at .
+            </li>
+            <li>
+              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              nullam odio neque diam. Sociis erat at .
+            </li>
+            <li>
+              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              nullam odio neque diam. Sociis erat at .
+            </li>
+          </ul>
+          <p style="color: black">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+          <button class="btn">Contact Now</button>
+        </div>
+        <div>
+          <img width="100%" src="Images/Rectangle 4.png" alt="" />
+        </div>
+      </section>
+
+      <section class="destination container text-center">
+        <h2>Choose Your Destination</h2>
+        <p style="color: black;">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</p>
+        <div class="image-gallery">
+
+            <div class="row1">
+                <div class="pic1">
+                    <img src="Images/Rectangle 5.png" alt="Image 1">
+                    <p>Maldive</p>
+                </div>
+                <div class="pic2">
+                    <img src="Images/Rectangle 8.png" alt="Image 2">
+                    <p>Indonesia</p>
                 </div>
             </div>
 
-        </section>
-
-        <section class="populer-tours container">
-            <div class="text-part">
-                <h2>Our Popular Tours</h2>
-                <p style="color:black;">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
-                <UL>
-                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
-                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
-                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
-                </UL>
-                <p style="color:black;">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
-                <button class="btn">Contact Now</button>
-            </div>
-            <div>
-                <img src="Images/Rectangle 4.png" alt="">
+            <div class="row2">
+                <div class="pic1">
+                    <img src="Images/Rectangle 6.png" alt="Image 1">
+                    <p>Srilanka</p>
+                </div>
+                <div class="pic2">
+                    <img src="Images/Rectangle 7.png" alt="Image 2">
+                    <p>North America</p>
+                </div>
+                <div class="pic2">
+                    <img src="Images/Rectangle 9.png" alt="Image 2">
+                    <p>Kashmir</p>
+                </div>
             </div>
 
-        </section>
+            <div class="row3">
+                <div class="pic1">
+                    <img src="Images/Rectangle 11.png" alt="Image 1">
+                    <p>Bangladesh</p>
+                </div>
+                <div class="pic2">
+                    <img src="Images/Rectangle 10.png" alt="Image 2">
+                    <p>Bandarban</p>
+                </div>
+            </div>
 
-        <section class="destination">
-            
-        </section>
-    </main>
+
+        </div>
+    </section>
     
-</body>
+    </main>
+  </body>
 </html>
+<!-- <h2>Choose Your Destination</h2>
+    <P style="color: black;">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.</P>
+    <div class="image-gallery">
+        <div class="pic1">
+            <img src="Images/Rectangle 5.png" alt="">
+            <p>maldive</p>
+        </div>
+        <div class="pic2">
+            <img src="Images/Rectangle 5.png" alt="">
+            <p>maldive</p>
+        </div>
+        <div class="pic3">
+            <img src="Images/Rectangle 5.png" alt="">
+            <p>maldive</p>
+        </div>
+        <div class="pic4">
+            <img src="Images/Rectangle 5.png" alt="">
+            <p>maldive</p>
+        </div>
+        <div class="pic5">
+            <img src="Images/Rectangle 5.png" alt="">
+            <p>maldive</p>
+        </div>
+    </div> -->
